--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "main": "public/electron/main.js",
   "dependencies": {
-    "@ant-design/colors": "^6.0.0",
-    "@ant-design/icons": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.0.7",
+    "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
