--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "midi-note": "^1.0.0",
+    "note-midi": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
