Added GrooveSkeleton and new functionality

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-POSITION_X=5150
-POSITION_Y=1200
-SIZE_X=2100
-SIZE_Y=2500
+# POSITION_X=5150
+# POSITION_Y=1200
+# SIZE_X=2100
+# SIZE_Y=2500
+
+POSITION_X=5120 
+POSITION_Y=0
+SIZE_X=1420
+SIZE_Y=1440
+
 SHOW_FILEMENU=true
 HIDE_DEVTOOLS=false
