--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "use-sound": "^4.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "webmidi": "^3.0.25"
   },
