Started work on the guitar riff generation - needs work

--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-redux": "^1.5.4",
     "midi-note": "^1.0.0",
     "note-midi": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
+    "use-file-picker": "^1.5.2",
     "use-sound": "^4.0.1",
     "util": "^0.12.5",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "webmidi": "^3.0.25"
   },
