--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "note-midi": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-files": "^3.0.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -58,5 +59,10 @@
     "electron": "^22.0.0",
     "electron-is-dev": "^2.0.0",
     "wait-on": "^6.0.1"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
